<resources>
    <string name="app_name">Educational App</string>
    <string name="take_a_quiz">Take a quiz</string>
    <string name="test_knowledge">You think you know that much, test your knowledge</string>
    <string name="name">Name</string>
    <string name="email">Add your email</string>
    <string name="send_to_email">Send result to my email</string>
    <string name="take_quiz">take quiz</string>
    <string name="agriculture">Agriculture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select Category</string>
    <string name="leucoytes">Leucoytes</string>
    <string name="axonopus_compressus">Axonopus Compressus</string>
    <string name="plant_disease">1. Which one among this is a symptom of plant disease</string>
    <string name="aspergillosis">Aspergillosis</string>
    <string name="rays_of_the_sun">They protect the soil surface from direct rays of the sun</string>
    <string name="leafy_crops_eaten_by_man">They are leafy crops and almost all parts are eaten by man</string>
    <string name="crops_their_seeds">They are crops grown mainly because of their seeds</string>
    <string name="crops_refreshment">They are crops grown for use as drinks or refreshment</string>
    <string name="plant_legumes">2. Which of these defines the plant:Legumes</string>
    <string name="beverages_plant_type">3. One of these is an example of beverages plant type</string>
    <string name="sorgghum">Sorghum</string>
    <string name="jute">Jute</string>
    <string name="tobacco">Tobacco</string>
    <string name="shea_butter">Shea Butter</string>
    <string name="organic_fertilizer">4. Which one of these is a property of organic fertilizer</string>
    <string name="one_plant_nutrient">it contains only one plant nutrient</string>
    <string name="good_soil_condition">It promote good soil condition</string>
    <string name="high_level_of_nutrient">They have relatively high level of nutrient</string>
    <string name="three_plant_nutrients">They contains 2 but not 3 plant nutrients</string>
    <string name="importantce_loamy_soil">5. Name one economic importance of a loamy soil</string>
    <string name="best_soil_for_agriculture">it is the best soil for agriculture</string>
    <string name="it_good_for_agriculture">it is usually fertile and good for agriculture</string>
    <string name="building_farm_houses">it is used for building farm houses</string>
    <string name="water_holding_capacity">it has high-water-holding capacity</string>
    <string name="fungal_disease">6. Which of these is an example of fungal disease</string>
    <string name="aspergillosis_fungal">Aspergillosis</string>
    <string name="trypanosomaiase">Trypanosomaiase</string>
    <string name="coccidiosis">Coccidiosis</string>
    <string name="brucellosis">Brucellosis</string>
    <string name="photosynthesis">7. Which of these is a factor affecting photosynthesis</string>
    <string name="mineral_content">Mineral Content</string>
    <string name="colour_of_leaves">Colour of leaves</string>
    <string name="electrical_conductivity">Electrical conductivity</string>
    <string name="myomrtriem">Myomrtriem</string>
    <string name="male_reporductive_system">8. One of these belongs to the male reporductive system</string>
    <string name="the_oviduct">The Oviduct</string>
    <string name="esophagus">Esophagus</string>
    <string name="ruminant_digestive_tract">9. Choose which one that belongs to the ruminant digestive tract</string>
    <string name="rumen">Rumen</string>
    <string name="cecum">Cecum</string>
    <string name="gizzard">Gizzard</string>
    <string name="cervix">Cervix</string>
    <string name="monogastric_animal">10. Name one charasterictis of a monogastric animal</string>
    <string name="they_can_regurgitate">They can regurgitate</string>
    <string name="cellullose_and_fiberes">They cannot digest cellullose and fiberes properly</string>
    <string name="they_has_rumen">They has rumen</string>
    <string name="information_technologies">Information Technologies</string>
    <string name="acronym_wan">What is the meaning of the acronym WAN</string>
    <string name="wireless_access_network">Wireless Access Network</string>
    <string name="wide_network">Wide Area Network</string>
    <string name="window_access_network">Window Access Network</string>
    <string name="wide_access_network">Wide Access Network</string>
    <string name="html_stands_for_what">HTML stands for what?</string>
    <string name="high_transport_media_layer">High Transport Media Layer</string>
    <string name="programming_language">which among these is not a programming language</string>
    <string name="xml_programming_language">Xml Programming Language</string>
    <string name="python_programming_language">Python Programming Language</string>
    <string name="nodejs">Nodejs</string>
    <string name="java_programming_langauge">Java Programming Langauge</string>
    <string name="divided_into_four_components">A computer system is divided into four components, namely:</string>
    <string name="input_output_processor_and_hardware">Input, Output, Processor, and Hardware</string>
    <string name="hardware_operating_system_application_programs_and_users">Hardware, Operating System, Application Programs, and users</string>
    <string name="hypertext_markup_language">HyperText Markup Language</string>
    <string name="hypertext_media_language">HyperText Media Language</string>
    <string name="hypertext_media_layer">HyperText Media Layer</string>
    <string name="cpu_network_structure_memory_and_file_system">CPU, Network Structure, Memory, and File System</string>
    <string name="process_counter_and_i_o_status_informantion">Process State, CPU Register, Program Counter, and I/O Status Informantion</string>
    <string name="device_immovable_media_and_can_store_large_gigabyte_of_data">A Device which is used to write , read to/from immovable media and can store large gigabyte of data is called</string>
    <string name="disk_drives">Disk Drives</string>
    <string name="hard_disk_drives">Hard Disk Drives</string>
    <string name="floppy_disk_drive">Floppy Disk Drive</string>
    <string name="flash_disk_drive">Flash Disk Drive</string>
    <string name="who_invented_the_wide_world_wild">Who Invented the Wide World Wild</string>
    <string name="tim_berner">Tim Berner</string>
    <string name="mark_zurkerberg">Mark Zurkerberg</string>
    <string name="what_is_a_process_as_it_relates_to_system_operaions">What is a Process as it relates to system Operaions</string>
    <string name="a_process_is_a_program_in_execution_task">A process is a program in execution that requires systems resource to carry out task in a sequential manner</string>
    <string name="a_process_is_the_interconnection_of_varied_system_components">A process is the interconnection of varied system components</string>
    <string name="a_process_is_a_step_taken_to_install_a_user_program_into_the_computer_system">A process is a step taken to install a user program into the computer system</string>
    <string name="a_process_defines_the_computer_system_wide_architecture">A process defines the computer system wide architecture</string>
    <string name="what_is_the_full_meaning_of_xml">What is the full meaning of XML</string>
    <string name="exchange_media_language">Exchange Media Language</string>
    <string name="extensible_markup_language">Extensible markup language</string>
    <string name="xerox_media_language">Xerox Media language</string>
    <string name="exchangeble_markup_language">Exchangeble Markup language</string>
    <string name="which_one_among_these_is_dubbed_the_brain_of_the_computer">Which one among these is dubbed \'the brain of the computer\'</string>
    <string name="read_access_memory">Read Access Memory</string>
    <string name="central_process_unit">Central Process Unit</string>
    <string name="motherboard">MotherBoard</string>
    <string name="monitor">Monitor</string>
    <string name="which_of_these_protocol_that_connects_a_computer_over_a_network_from_one_country_to_another">Which of these protocol that connects a computer over a network from one country to another</string>
    <string name="metropolitan_area_network">Metropolitan Area Network</string>
    <string name="wide_area_network">Wide Area Network</string>
    <string name="local_area_network">Local Area Network</string>
    <string name="wireless_fidelity">Wireless Fidelity</string>
    <string name="lara_page">Lara Page</string>
    <string name="bill_gate">Bill Gate</string>
    <string name="politics">Politics</string>
    <string name="_1_what_date_dd_dr_bukula_saraki_emerged_the_senate_preside">1. What date dd Dr. Bukula Saraki emerged the senate preside</string>
    <string name="march_2015">March, 2015</string>
    <string name="november_2015">November, 2015</string>
    <string name="february_2016">February, 2016</string>
    <string name="july_2009">July, 2009</string>
    <string name="thanks_for_participating">Thanks for Participating</string>
</resources>
