<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.android.educationalapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_a_quiz"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_knowledge"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/quiz_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/quiz_email"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"/>
    <CheckBox
        android:id="@+id/send_to_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/send_to_email"/>

    <Button
        android:id="@+id/take_quiz"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@drawable/button_bkg"
        android:text="@string/take_quiz"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"/>
    </LinearLayout>

</RelativeLayout>
